--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,1 +1,4 @@
-VITE_API_URL=https://ippl-quiz-master-production.up.railway.app/api
+# Frontend Production Environment Variables for Vercel
+# For now, using localhost for testing. Update when Railway backend is ready.
+
+VITE_API_URL=http://localhost:5000/api
