--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,11 @@
 [build]
-builder = "NIXPACKS"
-buildCommand = "cd backend && npm ci"
+builder = "DOCKERFILE"
+dockerfile = "backend/Dockerfile"
 
 [deploy]
-startCommand = "cd backend && node server.js"
+startCommand = "node backend/server.js"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
+healthcheckPath = "/health"
+healthcheckInterval = 10
+healthcheckTimeout = 5
