--- a/railway.toml
+++ b/railway.toml
@@ -1,11 +1,8 @@
 [build]
-builder = "DOCKERFILE"
-dockerfile = "backend/Dockerfile"
+builder = "NIXPACKS"
+buildCommand = "cd backend && npm ci"
 
 [deploy]
-startCommand = "node backend/server.js"
+startCommand = "cd backend && npm start"
 restartPolicyType = "ON_FAILURE"
 restartPolicyMaxRetries = 10
-healthcheckPath = "/health"
-healthcheckInterval = 10
-healthcheckTimeout = 5
