--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,39 @@
-node_modules
-.env.local
-backend/.env.local
-frontend/.env.local
+node_modules/
+.DS_Store
 *.log
+package-lock.json
+yarn.lock
+
+# Environment files (sensitive data)
+.env
+.env.local
+.env.*.local
+backend/.env
+backend/.env.local
+backend/.env.*.local
+frontend/.env
+frontend/.env.local
+frontend/.env.*.local
+
+# IDE & Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+*.sublime-project
+*.sublime-workspace
+
+# Build & Dist
+dist/
+build/
+.next/
+out/
+
+# Vercel
+.vercel/
+
+# Node
+npm-debug.log
+yarn-debug.log
+yarn-error.log
